@@ -3,6 +3,7 @@ Revision history for DBIx-Perlish
 NEXT
        Sub-queries can refer to tables in the outer scope.
        Translate "lc" and "uc" to "lower" and "upper", respectively.
+       Added support to EXISTS-style sub-queries.
 
 0.10  Tue Feb  6 09:46:58 2007
        Added support for simple funcalls.
